--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NDS Events</title>
+    <meta name="description" content=" Nds Events Agence de locations de matériel pour réception sur Grenoble">
   </head>
   <body>
     <div id="root"></div>
