--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/img/home/logoHomePage.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NDS Events</title>
     <meta name="description" content=" Nds Events Agence de locations de matériel pour réception sur Grenoble">
